--- a/Laba_1/index_2.html
+++ b/Laba_1/index_2.html
@@ -181,15 +181,11 @@
                         </div>
                         <p>Індикатор наступного кроку</p>
                         <div class="second-block">
-                            <div class="circle"><div>1</div></div>
-                            <div class="line">
-                                <div class="line-piece"></div>
-                            </div>
-                            <div class="circle"><div>2</div></div>
-                            <div class="line">
-                                <div class="line-piece"></div>
-                            </div>
-                            <div class="circle"><div>3</div></div>                            
+                            <table class="team-table">
+                                <tr>
+                                    
+                                </tr>
+                            </table>                            
                         </div>
                     </div>
                 </div>
