Laba1: near end

--- a/Laba_1/index_1.html
+++ b/Laba_1/index_1.html
@@ -6,7 +6,7 @@
         <link href="styles_1.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">   
    </head>
     <body>
         <div class="big-box">
@@ -16,14 +16,16 @@
             <div class="main-part">
                 <div class="menu">
                     <div class="menu-box">
-                        <div class="menu-content">
-                            <p>menu</p>
-                        </div>
+                        <ul class="main-menu">
+                            <li><a href="#">Таблиця</a></li>
+                            <li><a href="#">Календар матчів</a></li>
+                            <li><a href="#">Команди</a></li>
+                            <li><a href="#">Новини</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="big-block">
                     <div class="first-block">
-                        <p>first block</p>
                     </div>
                     <div class="mini-block">
                         <div class="content">
