--- a/Laba_1/index.html
+++ b/Laba_1/index.html
@@ -4,24 +4,27 @@
     <head>
         <title>Premier League</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> 
     </head>
     <body>
         <div class="header">
-            <p>heat</p>
+            <img src = "premier_league_logo_1.jpg" alt="Premier League logo" id="logo"/>
         </div>
-        <div class="main-part">
+        <div class="main-part clearfix">
             <div class="menu">
                 <p>menu</p>
             </div>
-            <div class="first-block">
-                <div>
+            <div class="big-block">
+                <div class="first-block">
                     <p>first block</p>
                 </div>
-                <div class="content">
-                    <p>content</p>
-                </div>
-                <div class="second-block">
-                    <p>second block</p>
+                <div class="mini-block">
+                    <div class="content">
+                        <p>content</p>
+                    </div>
+                    <div class="second-block">
+                        <p>second block</p>
+                    </div>
                 </div>
             </div>
         </div>
