--- a/Laba_1/index_2.html
+++ b/Laba_1/index_2.html
@@ -183,8 +183,145 @@
                         <div class="second-block">
                             <table class="team-table">
                                 <tr>
-                                    
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
                                 </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>             
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                
+                                <tr>
+                                    <td>num</td>
+                                    <td>logo</td>
+                                    <td>name</td>
+                                    <td>games</td>
+                                    <td>points</td>
+                                </tr>                                                 
                             </table>                            
                         </div>
                     </div>
