--- a/Laba_1/index_1.html
+++ b/Laba_1/index_1.html
@@ -56,127 +56,127 @@
                         <div class="content">
                             <p>Дошка для шахів</p>
                             <center>
-                            <table class="chess">
-                                <tr>
-                                    <th></th>
-                                    <th scope="col">a</th>
-                                    <th scope="col">b</th>
-                                    <th scope="col">c</th>
-                                    <th scope="col">d</th>
-                                    <th scope="col">e</th>
-                                    <th scope="col">f</th>
-                                    <th scope="col">g</th>
-                                    <th scope="col">h</th>
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">1</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">8</th>                                                                        
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">2</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">7</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">3</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">6</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">4</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">5</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">5</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">4</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">6</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">3</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">7</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">2</th>  
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="th-num">8</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <th scope="row" class="th-num">1</th>  
-                                </tr>
-                                <tr>
-                                    <th></th>
-                                    <th scope="col">a</th>
-                                    <th scope="col">b</th>
-                                    <th scope="col">c</th>
-                                    <th scope="col">d</th>
-                                    <th scope="col">e</th>
-                                    <th scope="col">f</th>
-                                    <th scope="col">g</th>
-                                    <th scope="col">h</th>
-                                    <th></th>
-                                </tr>
-                            </table>
+                                <table class="chess">
+                                    <tr>
+                                        <th></th>
+                                        <th scope="col">a</th>
+                                        <th scope="col">b</th>
+                                        <th scope="col">c</th>
+                                        <th scope="col">d</th>
+                                        <th scope="col">e</th>
+                                        <th scope="col">f</th>
+                                        <th scope="col">g</th>
+                                        <th scope="col">h</th>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">1</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">8</th>                                                                        
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">2</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">7</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">3</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">6</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">4</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">5</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">5</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">4</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">6</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">3</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">7</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">2</th>  
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" class="th-num">8</th>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <th scope="row" class="th-num">1</th>  
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th scope="col">a</th>
+                                        <th scope="col">b</th>
+                                        <th scope="col">c</th>
+                                        <th scope="col">d</th>
+                                        <th scope="col">e</th>
+                                        <th scope="col">f</th>
+                                        <th scope="col">g</th>
+                                        <th scope="col">h</th>
+                                        <th></th>
+                                    </tr>
+                                </table>>
                              </center>
                         </div>
                         <p>Індикатор наступного кроку</p>
