--- a/Laba_2/index.html
+++ b/Laba_2/index.html
@@ -4,9 +4,6 @@
     <head>
         <title>Premier League</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
-        <link href="fonts/Comfortaa-Bold" rel="stylesheet"> 
-        <link href="fonts/Indie+Flower" rel="stylesheet"> 
-        <link href="fonts/PlayfairDisplay-Regular" rel="stylesheet">   
    </head>
     <body>
         <div class="big-box">
@@ -54,7 +51,32 @@
                         </table>
                         </center>
                         -->
-                        
+                        <div class="logos-container">
+                            <div class="logos-half">
+                                <div> <img src = "logos/Arsenal_FC_1.png" alt="Arsenal" /></div>
+                                <div><img src = "logos/Burnley_FC_1.png" alt="Burnley" /></div>
+                                <div><img src = "logos/Bournemouth_FC_1.png" alt="Bournemouth" /></div>
+                                <div><img src = "logos/Chelsea_FC_1.png" alt="Chelsea"/></div>
+                                <div><img src = "logos/Crystal_Palace_FC_1.png" alt="Crystal" /></div>
+                                <div><img src = "logos/Everton_FC_1.png" alt="Everton" /></div>
+                                <div><img src = "logos/Hull_City_FC_1.png" alt="Hull" /></div>
+                                <div><img src = "logos/Leicester_City_FC_1.png" alt="Leicster" /></div>
+                                <div><img src = "logos/Liverpool_FC_1.png" alt="Liverpool" /></div>
+                                <div><img src = "logos/Manchester_City_FC_1.png" alt="Manchester C" /></div>
+                            </div>
+                            <div class="logos-half">
+                                <div><img src = "logos/Manchester_United_FC_1.png" alt="Manchester U" /></div>
+                                <div><img src = "logos/Middlesbrough-FC_1.png" alt="Middlesbrough" /></div>
+                                <div><img src = "logos/Southampton-FC_1.png" alt="Southampton" /></div>
+                                <div><img src = "logos/Stoke_City_FC_1.png" alt="Stoke City" /></div>
+                                <div><img src = "logos/Sunderland_FC_1.png" alt="Sunderland" /></div>
+                                <div><img src = "logos/Swansea_FC_1.png" alt="Swansea" /></div>
+                                <div><img src = "logos/Tottenham_Hotspur_FC_1.png" alt="Tottenham" /></div>
+                                <div><img src = "logos/Watford-FC_1.png" alt="Watford" /></div>
+                                <div><img src = "logos/West_Bromwich_Albion_FC_1.png" alt="West Bromwich Albion" /></div>
+                                <div><img src = "logos/West_Ham_United_FC_1.png" alt="West Ham United" /></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="mini-block">
                         <div class="content">
@@ -188,145 +210,145 @@
                         <div class="second-block">
                             <table class="team-table">
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">1</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Chelsea</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">75</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">2</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Spurs</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">71</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                
+                                    <td class="num-stat">3</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Liverpool</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">66</td>
+                                </tr>                         
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">4</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Man City</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">64</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">5</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Man Utd</td>
+                                    <td class="games-stat">31</td>
+                                    <td class="points-stat">57</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">6</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Arsenal</td>
+                                    <td class="games-stat">31</td>
+                                    <td class="points-stat">57</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                
+                                    <td class="num-stat">7</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Everton</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">57</td>
+                                </tr>                              
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">8</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">West Brom</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">44</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">9</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Southampton</td>
+                                    <td class="games-stat">31</td>
+                                    <td class="points-stat">40</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">10</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Watford</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">40</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                
+                                    <td class="num-stat">11</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Stoke</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">39</td>
+                                </tr>                               
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">12</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Leicester</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">37</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">13</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">West Ham</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">37</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">14</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Burnley</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">36</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                
+                                    <td class="num-stat">15</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Crystal Palace</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">35</td>
+                                </tr>                             
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>             
+                                    <td class="num-stat">16</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Bournemouth</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">35</td>
+                                </tr>            
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">17</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Hull</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">30</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
+                                    <td class="num-stat">18</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Swansea</td>
+                                    <td class="games-stat">33</td>
+                                    <td class="points-stat">28</td>
                                 </tr>
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                
+                                    <td class="num-stat">19</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Middlesbrough</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">24</td>
+                                </tr>                               
                                 <tr>
-                                    <td>num</td>
-                                    <td>logo</td>
-                                    <td>name</td>
-                                    <td>games</td>
-                                    <td>points</td>
-                                </tr>                                                 
+                                    <td class="num-stat">20</td>
+                                    <td class="logo-stat"></td>
+                                    <td class="name-stat">Sunderland</td>
+                                    <td class="games-stat">32</td>
+                                    <td class="points-stat">21</td>
+                                </tr>                                                
                             </table>                            
                         </div>
                     </div>
